# micro_kernel

./: .gitignore  LICENSE  Makefile  README.md  cspace.c  cspace.h  endpoint.c  endpoint.h  failures.h  functions.h  service.h  structures.h  tcb.c  tcb.h  thread.c  thread.h  types.h
include/: basic_types.h  compound_types.h  ctypes.h  machine.h  object.h  types.h  user.h  util.h
include/api/: failures.h  faults.h  syscall.h  types.h
include/kernel/: acpi.h  cspace.h  defs.h  elf.h  memblock.h  memlayout.h  mmu.h  proc.h  syscall.h  thread.h  traps.h  vm.h  vspace.h  x86.h
include/machine/: io.h  registerset.h
include/model/: smp.h  statedata.h
include/object/: cap.h  cnode.h  endpoint.h  notification.h  objecttype.h  structures.h  tcb.h  untyped.h
include/os/: config.h  functions.h
lib/src/: os.c
plugin/: receivetest.c  sendtest.c
plugin_rust/: Cargo.toml
plugin_rust/src/: lib.rs
plugin_rust/src/file_system/: api.rs  bio.rs  file_system.rs  fs.rs  log.rs
plugin_rust/src/ide_driver/: ide.rs
plugin_rust/src/lib/: link.rs  os.rs
plugin_rust/src/memory_allocator/: memory_allocator.rs
plugin_rust/src/memory_allocator/src/: allocator.rs
plugin_rust/src/memory_allocator/src/allocattor/: linked_list.rs
src/: inlines.c
src/api/: faults.c
src/fastpath/: fastpath.c
src/kernel/: acpi.c  bootasm.S  bootmain.c  buddy.c  console.c  cspace.c  entry64.S  ioapic.c  lapic.c  loadplugin.c  main.c  memblock.c  proc.c  string.c  swtch.S  syscall.c  sysproc.c  thread.c  trap.c  usys.S  usys.s  (+1 more)
tool/: movePlugin.py
tools/: gdbinit.tmpl  movePlugin.py
(+51 files in other folders)
